src/main/java/com/example/ecommerce/error/SuccessResult.java
package com.example.ecommerce.error;

public class SuccessResult extends Result{
    public SuccessResult(String message) {
        super(true, message);


    }
}